--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -1,10 +1,19 @@
 <div class="header">
-    <div id="left">left</div>
+    <div id="left">
+        <img src="./logo.svg" alt="">
+<hr style="width: 100%;">
+
+    </div>
     <div id="right">
-        <a href=""><h1>00</h1>HOME</a>
-        <a href=""><h1>01</h1>DESTINATION</a>
-        <a href=""><h1>02</h1>CREW</a>
-        <a href=""><h1>03</h1>TECHNOLOGIES</a>
+        <div id="h">  <a routerlink="/"><h1>00 </h1> HOME</a></div>
+        <div id="d">  <a routerlink="/destination"><h1>01 </h1> DESTINATION</a></div>
+        <div id="c">  <a routerlink="/crew"><h1>02 </h1> CREW</a></div>
+        <div id="t">  <a routerlink="/tech"><h1>03 </h1> TECHNOLOGIES</a></div>
+        
+      
+       
+        
+      
      
     </div>
 </div>
