--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,2 +1,5 @@
-<app-header></app-header>
-<router-outlet></router-outlet>
+<body>
+  <main class="home-hero"></main>
+  <app-header></app-header>
+  <router-outlet></router-outlet>
+</body>
