--- a/src/app/app.css
+++ b/src/app/app.css
@@ -2,3 +2,13 @@
 :host {
   display: block;
 }
+main.home-hero {
+  display: block;
+}
+
+main.home-hero:empty {
+  display: none;
+  height: 0;
+  padding: 0;
+  margin: 0;
+}
