--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -1,17 +1,15 @@
 <main class="home-hero">
   <div class="hero-inner">
     <section class="hero-copy">
-      <p class="eyebrow">SO, YOU WANT TO TRAVEL TO</p>
-      <h1 class="hero-title">SPACE</h1>
+      <p class="eyebrow">გინდა, რომ იმოგზაურო</p>
+      <h1 class="hero-title">კოსმოსში</h1>
       <p class="hero-desc">
-        Let's face it: if you want to go to space, you might as well genuinely go to outer space and
-        not hover kind of on the edge of it. Well sit back, and relax because we'll give you a truly
-        out of this world experience!
+        მოდით, სიმართლეს თვალებში შევხედოთ: თუ კოსმოსში წასვლა გსურთ, უმჯობესია, ნამდვილად გაფრინდეთ და არა მის კიდეზე. მოკალათდით და დაისვენეთ, რადგან ჩვენ ნამდვილად არაამქვეყნიურ გამოცდილებას შემოგთავაზებთ!
       </p>
     </section>
 
     <section class="hero-cta">
-      <a class="explore" routerLink="/destination">EXPLORE</a>
+      <a class="explore" routerLink="/destination">შეისწავლე</a>
     </section>
   </div>
 </main>
